	PR c++/54652 	* decl.c (duplicate_decls): Always use oldtype for TYPE_DECL.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@207169 138bc75d-0d04-0410-961f-82ee72b054a4